<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <description>Project presenting site percolation</description>
    <inceptionYear>2021</inceptionYear>

    <developers>
        <developer>
            <name>Albert Piekielny</name>
            <email>albert.piekielny@blue-veery.com</email>
            <organization>blue veery GmbH</organization>
            <organizationUrl>https://github.com/</organizationUrl>
        </developer>
    </developers>

    <groupId>pwr.edu</groupId>
    <artifactId>percolations</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <maven.compiler.source>15</maven.compiler.source>
        <maven.compiler.target>15</maven.compiler.target>
    </properties>

    <modules>
        <module>percolation-model</module>
    </modules>


    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
                </configuration>
            </plugin>
        </plugins>
    </build>


</project>